# Square

./: .gitignore  docker-compose.yml
api/: Makefile  pyproject.toml  ruff.toml
api/account/: admin.py  models.py
api/account/migrations/: 0001_initial.py  0002_user.py
api/api/: schema.py  settings.py  urls.py
api/api/middlewares/: auth.py
api/containers/development/: Dockerfile
api/default/: apps.py  views.py
api/default/templates/default/: top.html
api/templates/: base.html
db/init/: init-user-psql.sh
web/: .env.development.sample  .eslintrc.cjs  .prettierignore  codegen.ts  package.json
web/containers/development/: Dockerfile
web/src/: main.ts
web/src/doc/mutation/: SigninUser.ts
web/src/doc/query/: Users.ts
web/src/gql/: gql.ts  graphql.ts
web/src/layouts/: BoardLayout.vue
web/src/router/: index.ts
web/src/services/: authConfig.ts  client.ts  firebase.ts
web/src/views/: PingView.vue  SignInView.vue
web/src/views/board/: UsersView.vue
